<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>com.computablefacts</groupId>
  <artifactId>asterix</artifactId>
  <version>0.19-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>asterix</name>
  <description>Core data structures and algorithms.</description>
  <url>https://github.com/computablefacts/asterix</url>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git@github.com:computablefacts/asterix.git</connection>
    <developerConnection>scm:git:git@github.com:computablefacts/asterix.git</developerConnection>
    <url>https://github.com/computablefacts/asterix.git</url>
    <tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <name>ComputableFacts</name>
      <email>engineering@computablefacts.com</email>
      <url>https://computablefacts.com</url>
    </developer>
  </developers>

  <properties>
    <logfmt.version>0.14</logfmt.version>
    <slf4j.version>2.0.3</slf4j.version>
    <guava.version>31.1-jre</guava.version>
    <accumulo.version>1.10.1</accumulo.version>
    <zookeeper.version>3.4.14</zookeeper.version>
    <re2j.version>1.7</re2j.version>
    <ahocorasick.version>0.6.3</ahocorasick.version>
    <carrot.version>2.4.5</carrot.version>
    <fuzzywuzzy.version>1.4.0</fuzzywuzzy.version>
    <bplustree.version>0.1.3</bplustree.version>
    <smile.version>2.6.0</smile.version>
    <xstream.version>1.4.19</xstream.version>
    <jsonflattener.version>0.14.2</jsonflattener.version>
    <jackson-dataformat-csv.version>2.14.0</jackson-dataformat-csv.version>
    <jackson-dataformat-yaml.version>2.14.0</jackson-dataformat-yaml.version>
    <equalsverifier.version>3.11</equalsverifier.version>
    <javax-validation.version>2.0.1.Final</javax-validation.version>
    <jcip.version>1.0-1</jcip.version>
    <junit.version>4.13.1</junit.version>
    <error-prone.version>2.15.0</error-prone.version>
    <maven-shade-plugin.version>3.1.1</maven-shade-plugin.version>
    <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
    <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
    <maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
    <maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
    <maven-jacoco-plugin.version>0.8.8</maven-jacoco-plugin.version>
    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.computablefacts</groupId>
      <artifactId>logfmt</artifactId>
      <version>${logfmt.version}</version>
    </dependency>
    <dependency>
      <groupId>com.github.haifengl</groupId>
      <artifactId>smile-core</artifactId>
      <version>${smile.version}</version>
    </dependency>
    <dependency>
      <groupId>com.thoughtworks.xstream</groupId>
      <artifactId>xstream</artifactId>
      <version>${xstream.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.accumulo</groupId>
      <artifactId>accumulo-core</artifactId>
      <version>${accumulo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.accumulo</groupId>
      <artifactId>accumulo-server-base</artifactId>
      <version>${accumulo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.accumulo</groupId>
      <artifactId>accumulo-minicluster</artifactId>
      <version>${accumulo.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.zookeeper</groupId>
      <artifactId>zookeeper</artifactId>
      <version>${zookeeper.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.re2j</groupId>
      <artifactId>re2j</artifactId>
      <version>${re2j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.ahocorasick</groupId>
      <artifactId>ahocorasick</artifactId>
      <version>${ahocorasick.version}</version>
    </dependency>
    <dependency>
      <groupId>au.com.codeka</groupId>
      <artifactId>carrot</artifactId>
      <version>${carrot.version}</version>
    </dependency>
    <dependency>
      <groupId>me.xdrop</groupId>
      <artifactId>fuzzywuzzy</artifactId>
      <version>${fuzzywuzzy.version}</version>
    </dependency>
    <dependency>
      <groupId>com.github.davidmoten</groupId>
      <artifactId>bplustree</artifactId>
      <version>${bplustree.version}</version>
    </dependency>
    <dependency>
      <groupId>com.github.wnameless.json</groupId>
      <artifactId>json-flattener</artifactId>
      <version>${jsonflattener.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-csv</artifactId>
      <version>${jackson-dataformat-csv.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-yaml</artifactId>
      <version>${jackson-dataformat-yaml.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.errorprone</groupId>
      <artifactId>error_prone_annotations</artifactId>
      <version>${error-prone.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>${javax-validation.version}</version>
    </dependency>
    <!-- sudo apt install libmkl-dev -->
    <dependency>
      <groupId>com.github.haifengl</groupId>
      <artifactId>smile-mkl</artifactId>
      <version>${smile.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.github.stephenc.jcip</groupId>
      <artifactId>jcip-annotations</artifactId>
      <version>${jcip.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>nl.jqno.equalsverifier</groupId>
      <artifactId>equalsverifier</artifactId>
      <version>${equalsverifier.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>${basedir}/src</sourceDirectory>
    <testSourceDirectory>${basedir}/test</testSourceDirectory>
    <resources>
      <resource>
        <directory>${basedir}/src/resources</directory>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>${basedir}/test/resources</directory>
      </testResource>
    </testResources>
    <plugins>

      <!-- Restrict Imports -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.0.0-M2</version>
        <dependencies>
          <dependency>
            <groupId>de.skuzzle.enforcer</groupId>
            <artifactId>restrict-imports-enforcer-rule</artifactId>
            <version>1.1.0</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>check-logging-imports</id>
            <phase>process-sources</phase>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <restrictImports
                  implementation="de.skuzzle.enforcer.restrictimports.rule.RestrictImports">
                  <basePackages>
                    <basePackage>com.computablefacts.asterix.**</basePackage>
                  </basePackages>
                  <reason>Ban packages from being used in Asterix</reason>
                  <bannedImports>
                    <bannedImport>com.computablefacts.decima.**</bannedImport>
                    <bannedImport>com.computablefacts.jupiter.**</bannedImport>
                    <bannedImport>com.computablefacts.morta.**</bannedImport>
                    <bannedImport>com.computablefacts.nona.**</bannedImport>
                    <bannedImport>java.util.logging.**</bannedImport>
                  </bannedImports>
                </restrictImports>
                <restrictImports
                  implementation="de.skuzzle.enforcer.restrictimports.rule.RestrictImports">
                  <basePackages>
                    <basePackage>com.computablefacts.decima.**</basePackage>
                  </basePackages>
                  <reason>Ban packages from being used in Decima</reason>
                  <bannedImports>
                    <bannedImport>com.computablefacts.jupiter.**</bannedImport>
                    <bannedImport>com.computablefacts.morta.**</bannedImport>
                    <bannedImport>java.util.logging.**</bannedImport>
                  </bannedImports>
                </restrictImports>
                <restrictImports
                  implementation="de.skuzzle.enforcer.restrictimports.rule.RestrictImports">
                  <basePackages>
                    <basePackage>com.computablefacts.junon.**</basePackage>
                  </basePackages>
                  <reason>Ban packages from being used in Junon</reason>
                  <bannedImports>
                    <bannedImport>com.computablefacts.asterix.**</bannedImport>
                    <bannedImport>com.computablefacts.decima.**</bannedImport>
                    <bannedImport>com.computablefacts.jupiter.**</bannedImport>
                    <bannedImport>com.computablefacts.morta.**</bannedImport>
                    <bannedImport>com.computablefacts.nona.**</bannedImport>
                    <bannedImport>java.util.logging.**</bannedImport>
                  </bannedImports>
                </restrictImports>
                <restrictImports
                  implementation="de.skuzzle.enforcer.restrictimports.rule.RestrictImports">
                  <basePackages>
                    <basePackage>com.computablefacts.jupiter.**</basePackage>
                  </basePackages>
                  <reason>Ban packages from being used in Jupiter</reason>
                  <bannedImports>
                    <bannedImport>com.computablefacts.decima.**</bannedImport>
                    <bannedImport>com.computablefacts.junon.**</bannedImport>
                    <bannedImport>com.computablefacts.morta.**</bannedImport>
                    <bannedImport>com.computablefacts.nona.**</bannedImport>
                    <bannedImport>java.util.logging.**</bannedImport>
                    <bannedImport>java.sql.Date</bannedImport>
                  </bannedImports>
                </restrictImports>
                <restrictImports
                  implementation="de.skuzzle.enforcer.restrictimports.rule.RestrictImports">
                  <basePackages>
                    <basePackage>com.computablefacts.nona.**</basePackage>
                  </basePackages>
                  <reason>Ban packages from being used in Nona</reason>
                  <bannedImports>
                    <bannedImport>com.computablefacts.decima.**</bannedImport>
                    <bannedImport>com.computablefacts.junon.**</bannedImport>
                    <bannedImport>com.computablefacts.jupiter.**</bannedImport>
                    <bannedImport>com.computablefacts.morta.**</bannedImport>
                    <bannedImport>java.util.logging.**</bannedImport>
                  </bannedImports>
                </restrictImports>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Compile project using Google Error-Prone -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>8</source>
          <target>8</target>
          <encoding>UTF-8</encoding>
          <compilerArgs>
            <arg>-XDcompilePolicy=simple</arg>
            <arg>-Xplugin:ErrorProne</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>com.google.errorprone</groupId>
              <artifactId>error_prone_core</artifactId>
              <version>${error-prone.version}</version>
            </path>
            <!-- Other annotation processors go here.

            If 'annotationProcessorPaths' is set, processors will no longer be
            discovered on the regular -classpath; see also 'Using Error Prone
            together with other annotation processors' below. -->
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <!-- Code Coverage Reports -->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${maven-jacoco-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Unit Tests -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <parallel>classes</parallel>
          <threadCount>5</threadCount>
          <reuseForks>false</reuseForks>
          <skipTests>false</skipTests>
          <argLine>-Xmx4g --add-opens java.base/java.util=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>allow-snapshots</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <repositories>
        <repository>
          <id>snapshots-repo</id>
          <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
          <releases>
            <enabled>false</enabled>
          </releases>
          <snapshots>
            <enabled>true</enabled>
          </snapshots>
        </repository>
      </repositories>
    </profile>
    <profile>
      <id>publish</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-source-plugin</artifactId>
            <version>${maven-source-plugin.version}</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <phase>package</phase>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>${maven-javadoc-plugin.version}</version>
            <configuration>
              <additionalparam>-Xdoclint:none</additionalparam>
            </configuration>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <phase>package</phase>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>${maven-gpg-plugin.version}</version>
            <configuration>
              <!-- Prevent gpg from using pinentry programs -->
              <gpgArguments>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>1.6.8</version> <!-- ${maven-nexus-staging-plugin.version} -->
            <extensions>true</extensions>
            <configuration>
              <serverId>ossrh</serverId>
              <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
              <autoReleaseAfterClose>true</autoReleaseAfterClose>
            </configuration>
          </plugin>
        </plugins>
      </build>
      <distributionManagement>
        <snapshotRepository>
          <id>ossrh</id>
          <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
          <id>ossrh</id>
          <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
      </distributionManagement>
    </profile>
  </profiles>
  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub Packages</name>
      <url>https://maven.pkg.github.com/computablefacts/asterix</url>
    </repository>
  </distributionManagement>
</project>
